<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btn_share"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_above="@+id/txtView_score"
            android:layout_alignTop="@+id/imageView_life"
            android:layout_toLeftOf="@+id/txtView_score"
            android:layout_toStartOf="@+id/txtView_score"
            android:background="@android:drawable/ic_menu_share" />

        <Button
            android:id="@+id/btn_vicScreen_to_menu"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/btn_vicScreen_to_scoreboard"
            android:layout_marginTop="14dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/main_menu"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_playagain"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="false"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/btn_vicScreen_to_menu"
            android:layout_centerHorizontal="false"
            android:layout_marginTop="14dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/play_again"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_vicScreen_to_scoreboard"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/txtView_solvedExercises"
            android:layout_marginTop="19dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/scoreboard"
            android:textColor="@android:color/background_light"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtView_currentscore2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/txtView_score"
            android:layout_alignBottom="@+id/txtView_score"
            android:layout_toEndOf="@+id/imageView_life5"
            android:layout_toRightOf="@+id/imageView_life5"
            android:text="@string/_00000"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/txtView_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView_life"
            android:layout_marginTop="16dp"
            android:layout_toLeftOf="@+id/imageView_life5"
            android:layout_toStartOf="@+id/imageView_life5"
            android:text="@string/score"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/txtView_newHighscore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@android:color/background_light"
            android:layout_below="@+id/txtView_currentscore2"
            android:layout_marginTop="160.0dp"
            android:text="New Highscore!"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/txtView_solvedExercises"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@android:color/background_light"
            android:layout_below="@+id/txtView_newHighscore"
            android:layout_marginTop="200.0dp"
            android:text="You solved 0 exercises."
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtView_timeisup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@android:color/background_light"
            android:text="@string/time_is_up"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="35sp"
            tools:text="YOUR TIME IS UP!" />

        <ImageView
            android:id="@+id/imageView_life"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignTop="@+id/imageView_life5"
            android:layout_marginEnd="11dp"
            android:layout_marginRight="11dp"
            android:layout_toLeftOf="@+id/imageView_life5"
            android:layout_toStartOf="@+id/imageView_life5"
            android:background="@color/colorPrimaryDark"
            android:contentDescription="@string/life1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/white_skull" />

        <ImageView
            android:id="@+id/imageView_life1"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignTop="@+id/imageView_life5"
            android:layout_marginLeft="11dp"
            android:layout_marginStart="11dp"
            android:layout_toEndOf="@+id/imageView_life5"
            android:layout_toRightOf="@+id/imageView_life5"
            android:background="@color/colorPrimaryDark"
            android:contentDescription="@string/life3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/white_skull" />

        <ImageView
            android:id="@+id/imageView_life5"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_below="@+id/txtView_timeisup"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimaryDark"
            android:contentDescription="@string/life2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/white_skull" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
