<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView_life3"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignTop="@+id/imageView_life1"
            android:layout_toEndOf="@+id/editTextInput"
            android:layout_toRightOf="@+id/editTextInput"
            android:background="@android:color/holo_red_dark"
            android:contentDescription="todo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_launcher" />

        <ImageView
            android:id="@+id/imageView_life1"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignTop="@+id/imageView_life2"
            android:layout_toLeftOf="@+id/editTextInput"
            android:layout_toStartOf="@+id/editTextInput"
            android:background="@android:color/holo_red_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_launcher" />

        <ImageView
            android:id="@+id/imageView_life2"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@android:dimen/app_icon_size"
            android:background="@android:color/holo_red_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_launcher" />

        <EditText
            android:id="@+id/editTextInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtView_exercise"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="14dp"
            android:ems="3"
            android:inputType="number"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/txtView_exercise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relativeLayout5"
            android:layout_centerHorizontal="true"
            android:background="@color/colorPrimaryDark"
            android:text="@string/_1_1"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textSize="60sp"
            android:textStyle="italic" />

        <RelativeLayout
            android:id="@+id/relativeLayout5"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/txtView_currenttime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/txtView_timer_gamescreen"
                android:layout_alignStart="@+id/txtView_timer_gamescreen"
                android:layout_below="@+id/txtView_timer_gamescreen"
                android:layout_marginTop="20dp"
                android:text="@string/_01_00"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txtView_timer_gamescreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="@string/timer"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/txtView_currentscore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtView_score_gamescreen"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:text="@string/_00000"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txtView_score_gamescreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="@string/score"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />
        </RelativeLayout>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
